# hopper

./: .clang-format  .gitignore  Cargo.toml  README.md  build.sh  build.zig  build.zig.zon  flake.nix  handler.py  meson.build  mux.py  pipe.py  pyproject.toml  read.py  setup.py  twoway.py  write.py
.github/workflows/: build_nix.yml
client/: __init__.py  client.py  lib.c  lib.cpp  meson.build
client/lib/: lib.c  meson.build
client/py/: __init__.py  hopper.py  hoppermodule.c  meson.build  reader.py
client/rs/: Cargo.toml
client/rs/src/: error.rs  lib.rs  pipe.rs
common/: pipe.py  pipe_name.py  pipe_type.py
daemon/: buffer.cpp  daemon.cpp  daemon_endpoint.cpp  daemon_inotify.cpp  daemon_pipe.cpp  endpoint.cpp  main.cpp  meson.build  pipe.cpp  util.cpp
hopper/client/: __init__.py  client.py  reader.py
hopper/common/: pipe.py
hopper/server/: __main__.py  handler.c  handler.h  handler.py  main.zig  pipe.c  pipe.h  server.c  server.h  server.py  spec.py
include/hopper/: hopper.h
include/hopper/client/py/: hoppermodule.h
include/hopper/daemon/: buffer.hpp  daemon.hpp  endpoint.hpp  event.hpp  logging.hpp  marker.hpp  pipe.hpp  util.hpp
include/hopper/server/: buffer.hpp  handler.hpp  hopper.hpp  pipe.hpp
nix/: package.nix  python.nix  rust.nix
rcmux/client/: __init__.py  client.py
rcmux/common/: pipe.py
rcmux/server/: __main__.py  handler.py  server.py  spec.py
rcmux/util/: read.py  write.py
server/: __main__.py  buffer.cpp  handler.py  main.cpp  meson.build  pipe.cpp  server.py  spec.py
util/: read.py  write.py
